# PyTorch2Cpp-Inference

./: .gitignore  README.md
cpp_inference/: CMakeLists.txt
cpp_inference/src/: main.cpp  params.h
training/: digit-predictor-cpu.pt  train.py
